chatbot/k8s/components/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-ingress
spec:
  ingressClassName: nginx  # This replaces the deprecated annotation
  rules:
    - host: "okeusersservice.sanchezapps.net"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: users-service
                port:
                  number: 80
